--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "style-loader": "^0.23.1",
     "webpack": "^4.28.3",
     "webpack-cli": "^3.2.0",
-    "webpack-dev-server": "^3.1.14"
+    "webpack-dev-server": "^3.1.14",
+    "tar": ">=2.2.2"
   },
   "dependencies": {
     "bootstrap": "^4.3.1"
